Added user data

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-standard": "^27.0.0"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^5.3.0-alpha3"
+  }
 }
